@@ -1,3 +1,5 @@
+    - Added confirmation dialog that allows saving without backup in cases when
+      backup creation fails.
     - Fixed bug 2938562: using the move/rename feature on a file link could give an
       absolute link even if the file was put below the main file directory. 
     - Fixed bug 2931293: error generating key with [authorsAlpha] for short names.
